--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:ui": "(if exist build rmdir /s /q build )&& cd ../../fullstackopen-2019/part2/phonebook && npm run build --prod && xcopy /E build ..\\..\\..\\part3\\phonebook-backend\\build\\",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild  && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
     "nodemon": "^1.19.2"
   }
 }
